tests/bad/testProcRedeclaration.grc
proc duplicate() {
	print("first implementation")
}

proc duplicate() {
	print("second implementation")
}

duplicate()